[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Tower/bow.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Tower/archertower.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Tower/base.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Tower.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "basic",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "plot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 135.182

[sub_resource type="CapsuleShape2D" id=4]
radius = 10.445
height = 43.8909

[node name="Tower" type="Area2D"]
script = ExtResource( 4 )

[node name="TowerBase" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "basic"

[node name="TowerGun" type="AnimatedSprite" parent="."]
position = Vector2( 0, -19 )
rotation = -6.28319
frames = SubResource( 2 )

[node name="ShotPosition" type="Node2D" parent="TowerGun"]

[node name="Aggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
visible = false
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BuildArea" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21.5681 )
rotation = 1.5708
shape = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Tower_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Tower_area_exited"]
[connection signal="area_entered" from="Aggro" to="." method="_on_Aggro_area_entered"]
[connection signal="area_exited" from="Aggro" to="." method="_on_Aggro_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
